@@ -155,7 +155,7 @@ def getTrovesToDisplay(db, troveSpecs, pathList=[]):
     else:
         troveSpecs = []
 
-    pathList = [os.path.abspath(util.normpath(x)) for x in pathList]
+    pathList = [os.path.abspath(util.realpath(x)) for x in pathList]
 
     troveTups = []
     for path in pathList:
